@startuml

title __BİNARYSEARCHTREE's Class Diagram__\n

  namespace BinarySearchTree {
    class BinarySearchTree.BinarySearchTree {
        - elements : ArrayList<E>
        + BinarySearchTree()
        + add()
        + contains()
        + remove()
        + toString()
    }
  }
  

  namespace BinarySearchTree {
    class BinarySearchTree.BinaryTree {
        # root : Node<E>
        + BinaryTree()
        + BinaryTree()
        + BinaryTree()
        + getData()
        + getLeftSubtree()
        + getRightSubtree()
        + isLeaf()
        {static} + readBinaryTree()
        + setLeft()
        + setRight()
        + setRootData()
        + toString()
        - preOrderTraverse()
    }
  }
  

  namespace BinarySearchTree {
    class BinarySearchTree.BinaryTree.Node {
        # left : Node<E>
        # right : Node<E>
        + Node()
        + toString()
    }
  }
  

  namespace BinarySearchTree {
    interface BinarySearchTree.SearchTree {
        {abstract} + add()
        {abstract} + contains()
        {abstract} + remove()
    }
  }
  

  BinarySearchTree.BinarySearchTree .up.|> BinarySearchTree.SearchTree
  BinarySearchTree.BinarySearchTree -up-|> BinarySearchTree.BinaryTree
  BinarySearchTree.BinaryTree .up.|> Serializable
  BinarySearchTree.BinaryTree +-down- BinarySearchTree.BinaryTree.Node
  BinarySearchTree.BinaryTree.Node .up.|> Serializable
  BinarySearchTree.BinaryTree.Node o-- E : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
